--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,16 +13,8 @@
         android:theme="@style/Theme.AppCompat.Light"
         tools:targetApi="31">
         <activity
-            android:name="tuan2.tuan22MainActivity"
+            android:name="tuan4.T4LvMainActivity"
             android:exported="true" >
-
-        </activity>
-        <activity
-            android:name="tuan2.tuan21MainActivityResult"
-            android:exported="false" />
-        <activity
-            android:name="tuan2.tuan21MainActivity"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,8 +22,27 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="tuan4.T4MainActivity"
+            android:exported="true" >
+
+        </activity>
+        <activity
+            android:name="tuan3.T3ListviewMainActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name="tuan2.tuan22MainActivity"
+            android:exported="true" />
+        <activity
+            android:name="tuan2.tuan21MainActivityResult"
+            android:exported="false" />
+        <activity
+            android:name="tuan2.tuan21MainActivity"
+            android:exported="true" />
+        <activity
             android:name="tuan1.tuan11MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
