--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +16,7 @@
         android:theme="@style/Theme.AppCompat.Light"
         tools:targetApi="31">
         <activity
-            android:name="tuan4.T4LvMainActivity"
+            android:name="week8.btweek6MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,15 +25,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="tuan4.T4MainActivity"
-            android:exported="true" >
-
-        </activity>
-        <activity
-            android:name="tuan3.T3ListviewMainActivity"
+            android:name="week7.week7MainActivity"
             android:exported="true">
 
         </activity>
+        <activity
+            android:name="tuan4.T4LvMainActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name="tuan4.T4MainActivity"
+            android:exported="true" />
+        <activity
+            android:name="tuan3.T3ListviewMainActivity"
+            android:exported="true" />
         <activity
             android:name="tuan2.tuan22MainActivity"
             android:exported="true" />
