--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,10 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name="week8.Tuan6DetailActivity"
+            android:exported="false" />
+        <activity
             android:name="week8.btweek6MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,12 +29,10 @@
         </activity>
         <activity
             android:name="week7.week7MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name="tuan4.T4LvMainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name="tuan4.T4MainActivity"
             android:exported="true" />
